--- a/Basic_CNN.ipynb
+++ b/Basic_CNN.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Deformable Convolution for Lung Cancer Prediction Based on Transcriptomic Data : a Basic Convolutional Neural Network**\n",
+    "# **Deep Learning For Lung Cancer Prediction Based on Transcriptomic Data : a Basic Convolutional Neural Network with Transfer Learning**\n",
     "> Author : **Aymen MERROUCHE**. <br>\n",
-    "> In this notebook, we implement a basic CNN for our binary classification task. First we pre train our CNN on the non Lung cancer dataset. Then, we fine tune it on the lung cancer dataset (we don't freeze the convolutional layers, and we don't keep the dense layers) :"
+    "> In this notebook, we implement a basic CNN for our binary classification task. First we pre train our CNN on the non Lung cancer dataset. Then, in a transfer learning approach, we fine tune it on the lung cancer dataset (we don't freeze the convolutional layers, and we don't keep the dense layers meaninig that only the convolutional layers are kept) :"
    ]
   },
   {
@@ -1628,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
